Fix alignment of resend button in members page
Closes https://gitlab.com/gitlab-org/gitlab-ce/issues/55869

--- a/app/assets/stylesheets/framework/lists.scss
+++ b/app/assets/stylesheets/framework/lists.scss
@@ -177,14 +177,6 @@ ul.content-list {
       }
     }
 
-    .member-controls {
-      float: none;
-
-      @include media-breakpoint-up(sm) {
-        float: right;
-      }
-    }
-
     // When dragging a list item
     &.ui-sortable-helper {
       border-bottom: 0;
